...
        }
    }
    
    // pop up window
    func alterOne(message: String){
        let alc = UIAlertController(title: message, message: nil, preferredStyle: UIAlertControllerStyle.Alert)
        alc.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.Cancel, handler: nil))
        self.presentViewController(alc, animated: true, completion: nil)
    }
    
    // Validation for all the below textfield
    @IBAction func submitButtonAction(sender: AnyObject) {
        if self.firstnameTextField.validateFirstName() && self.lastnameTextField.validateLastName() && self.emailAddressTextField.validateEmail(){
                self.alterOne("Thanks for your feedback")
        }else if !self.firstnameTextField.validateFirstName(){
            self.alterOne("Your first name is not accurate")
        }else if !self.lastnameTextField.validateLastName(){
            self.alterOne("Your last name is not accurate")
        }else if !self.emailAddressTextField.validateEmail(){
            self.alterOne("Your email address is not accurate")
...
